--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -13,14 +13,22 @@ html(lang="en")
             div#start
                 h2 Welcome to Noop
                 form
-                    input(placeholder="Room name" type="text" required)
-                    button Make room
+                    input(id="rname" placeholder="Room name" type="text" required)
+                    input(id="nick" placeholder="Nickname" type="text" required)
+                    button Join room
+                h4 Open Rooms&rarr;
+                ul
             div#room
                 h3
                 ul
                 form
                     input(placeholder="Write Message" type="text" required)
                     button Send Message
+            div#nickname
+                h3 
+                form
+                    input(placeholder="Write new nickname" type="text" required)
+                    button change
 
         script(src=`/socket.io/socket.io.js`)
         script(src="/public/js/app.js") 
